# gyro-sms-deb

./: CMakeLists.txt  LICENSE  README.md  gyro-sms-deb-release.sh
